# RAG-Udemy-Krish-Naik

./: .env  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/structured_files/: inventory.xlsx
1-VectorEmbeddingsAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
2-Vetcor Stores/: 1-chromadb.ipynb  2-faiss.ipynb  Datastaxdb+(1).ipynb  PineconeVectorDB.ipynb
2-Vetcor Stores/chroma_db/: chroma.sqlite3
2-Vetcor Stores/faiss_index/: index.faiss  index.pkl
3-AdvancedChunking/: 1-semantichunking.ipynb
4-Hybrid Search Strategies/: 1-densesparse.ipynb
AgenticAIWorkspace/: .env
AgenticAIWorkspace/1-LangGraph Basics/: 2-chatbot.ipynb  simplegraph.ipynb
updatedlangchain/: .env  requirements.txt
updatedlangchain/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
